# operator

./: .gitignore  .gitlab-ci.yml  .gitmodules  .prettierignore  CLAUDE.local.md  CLAUDE.md  Cargo.toml  TESTING.md  forge.config.ts  package.json  playwright.config.ts  release.sh  rust-toolchain.toml  rustfmt.toml  tsconfig.json  vite.main.config.ts  vitest.config.ts
.beads/: export-state.json  interactions.jsonl  last-touched
.beads/backup/: backup_state.json  manifest
.claude/skills/comment-audit/: SKILL.md  extract-changed-comments.mjs
.github/workflows/: ci.yml  release.yml
.gitlab/: upload-release-assets.ps1  upload-release-assets.sh
.husky/: pre-commit
apps/operator-zed/: Cargo.toml  HANDOFF.md  build.rs
apps/operator-zed/dsl/: analyze_source_stub.ts  build.mjs  entry.ts  modular_core_shim.ts
apps/operator-zed/examples/: hello.modular  scope.modular
apps/operator-zed/macos/: Info.plist  build-app.sh
apps/operator-zed/src/: audio.rs  controls.rs  dsl.rs  dsl_runtime.rs  dsl_state.rs  editor_view.rs  file_explorer.rs  main.rs  root_view.rs  scope_blocks.rs  scopes.rs  toolbar.rs
crates/: reserved_output_names.rs
crates/modular/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  schemas.json
crates/modular/.github/: renovate.json
crates/modular/.github/workflows/: CI.yml
crates/modular/__test__/: napi.test.ts
crates/modular/benchmark/: bench.ts
crates/modular/dsl/src/runtime/composites/: $ott.ts
crates/modular/dsl/src/runtime/executor/: buildContext.ts  types.ts
crates/modular/scripts/: copy-host-binary-to-npm.mjs
crates/modular/src/: alloc_detector.rs  audio.rs  commands.rs  graph_analysis.rs  lib.rs  link.rs  midi.rs  panic_log.rs  params_cache.rs  recording.rs  validation.rs  wav_bpm.rs  wav_metadata.rs
crates/modular/src/midi/: devices.rs  mod.rs  parse.rs  tests.rs
crates/modular/src/validation/: mod.rs  module_ids.rs  signal_refs.rs  tests.rs
crates/modular_core/: Cargo.toml  PERF_PLAN.md
crates/modular_core/benches/: mix_bench.rs  overdrive_bench.rs  shape_bench.rs
crates/modular_core/src/: block_port.rs  lib.rs  module_state.rs  params.rs  patch.rs  poly.rs  profiling.rs  types.rs
crates/modular_core/tests/: block_outputs_tests.rs  block_render_ceiling.rs  connect_alloc_free.rs  dsp_fresh_tests.rs  peggy_parser_parity.rs  profiling_integration.rs  sp_combine_strudel_parity.rs  types_tests.rs
crates/modular_derive/src/: connect.rs  module_attr.rs  outputs.rs
docs/plans/: 2026-04-14-dc-offset-fix-design.md  2026-04-15-dc-offset-fix-plan.md  2026-04-15-utility-dynamic-range-plan.md
docs/superpowers/specs/: 2026-04-16-wavetable-oscillator-design.md  2026-05-29-sp-combine-fixtures-generate-on-demand-design.md  2026-06-05-fractional-ribbon-design.md
e2e/: fixtures.ts
e2e/tests/: dsl-execution.test.ts  engineHealth.test.ts  errors.test.ts  patch-editing.test.ts  visual.test.ts  vu-meter.test.ts
native/syphon-bridge/: .gitignore  Info.plist  Package.swift  README.md  syphon-entitlements.plist
scripts/: build-syphon-bridge.mjs  copy-debuginfo.mjs  gen-sp-fixture.mjs  generate-update-metadata.mjs  patch-electron-plist.mjs  resolveMigrationVersions.mjs  watch-native.mjs
src/main/: appConfig.ts  bufferSwitch.ts  fallbackWarning.ts  helpNavigation.ts  main.ts  patchSimilarityRemap.ts  serializeForIPC.ts  workspacePaths.ts
src/main/__tests__/: appConfig.test.ts  bufferSwitch.test.ts  fallbackWarning.test.ts  helpNavigation.test.ts  serializeForIPC.test.ts  workspacePaths.test.ts
src/main/dsl/: GraphBuilder.ts  analyzeSource.ts  argumentSpanAnalyzer.ts  callSiteSpanAnalyzer.ts  captureSourceLocation.ts  executor.ts  factories.ts  paramsSchema.ts  typescriptLibGen.ts
src/main/syphon/: SyphonBridge.ts
src/preload/: preload.ts
src/renderer/: App.css  App.tsx  configSchema.ts  global.d.ts  renderer.tsx
src/renderer/__tests__/: moduleStateTracking.test.ts
src/renderer/app/: buffers.ts  oscilloscope.ts  scopeCallRange.ts  sliderChange.ts  transportStore.ts  validationErrorLocations.ts  (+1 more)
src/shared/: compareVersion.test.ts  compareVersion.ts  ipcTypes.ts  patchVersionStamp.test.ts  patchVersionStamp.ts
(+274 files in other folders)
