[workspace]
resolver = "3"
members = [
    "crates/modular_core",
    "crates/modular_derive",
    "crates/mi-plaits-dsp-rs",
    "crates/rust-music-theory",
    "crates/modular",
    "apps/operator-zed",
]
default-members = [
    "crates/modular_core",
    "crates/modular_derive",
    "crates/modular",
]
exclude = ["vendor/zed"]

[workspace.dependencies]
profiling = "1.0"
tracy-client = { version = "0.17", default-features = false }

# Profile for Tracy profiling - keeps debug symbols for stack traces
[profile.profiling]
inherits = "release"
strip = false
debug = 1
