
[package]
authors = ["Dan Lewis"]
edition = "2024"
name    = "modular"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = []
tracy   = ["modular_core/tracy", "tracy-client", "profiling/profile-with-tracy"]

[dependencies]
aubio = { version = "0.2", features = ["builtin", "bindgen"] }
bytemuck = "1.24.0"
crossbeam-channel = "0.5"
dirs = "5"
hound = "3.5"
lru = "0.16.3"
midir = "0.10"
napi-derive = "3.4.1"
parking_lot = "0.12.5"
petgraph = { version = "0.8", default-features = false, features = [
  "graphmap",
  "std",
] }
profiling = { workspace = true }
regex = "1.12.2"
riff = "2"
ringbuf = "0.4"
rtrb = "0.3"
schemars = "1.1.0"
serde_json = "1.0.147"
tracy-client = { workspace = true, optional = true }

  [dependencies.napi]
  features = ["serde", "serde-json", "napi10"]
  version  = "3.7.1"

  [dependencies.chrono]
  default-features = true
  version          = "0.4"

  [dependencies.cpal]
  features = ["jack"]
  version  = "0.17.0"

  [dependencies.modular_core]
  path    = "../modular_core"
  version = "*"

  [dependencies.rusty_link]
  version = "0.4"

  [dependencies.serde]
  features = ["derive"]
  version  = "1.0"

[build-dependencies]
napi-build = "2"

[profile.dev]
debug     = true
opt-level = 0
